# aspell-win32

./: .gitignore  .gitmodules  README.md  mk-cmake.bat  mk-submodule.bat
.github/workflows/: build.yml  dictionaries.yml  findflaws.yml
msvc2015/: .gitignore  BuildInfo.h  aspell_msvc2015.sln  msvc2015.sln
msvc2015/PDCurses/: PDCurses.vcxproj  PDCurses.vcxproj.filters
msvc2015/PDCurses/firework/: firework.vcxproj  firework.vcxproj.filters
msvc2015/PDCurses/ozdemo/: ozdemo.vcxproj  ozdemo.vcxproj.filters
msvc2015/PDCurses/tuidemo/: tuidemo.vcxproj  tuidemo.vcxproj.filters
msvc2015/PDCurses/worm/: worm.vcxproj  worm.vcxproj.filters
msvc2015/aspell/: CMakeLists.txt  aspell.vcxproj  aspell.vcxproj.filters
msvc2015/libaspell/: libaspell.vcxproj  libaspell.vcxproj.filters
msvc2015/win32port/: libwin32port.vcxproj  libwin32port.vcxproj.filters
win32port/: Aspell.iss.in  Aspell.rc.in  BuildInfo.h.in  Dictionary.iss.in  dirent.c  dirent.h  dirs.cpp  dirs.h  gettext_init.cpp  libaspell.def  libpspell.c  mk-src.bat  mk-static-src.bat  msvcpatch.h  package_list.txt  settings.h  url-filter.info
win32port/libcitrus/: citrus.txt
win32port/libiconv/: iconv.h  win_iconv.c
win32port/libintl/: compat_langinfo.c  compat_mman.c  compat_strlcat.c  compat_strlcpy.c  compat_strsep.c  gettext.c  langinfo.h  libintl.h  libintl_local.h  namespace.h  pathnames.h  plural_parser.c  sysdep.c  textdomain.c  tfind.c  tsearch.c
win32port/libintl/sys/: cdefs.h  mman.h  msinttypes.h  param.h  utypes.h
win32port/mandoc/: README.txt
